[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/evil-rock/waking_evil_rock_0.png" type="Texture" id=1]
[ext_resource path="res://assets/evil-rock/waking_evil_rock_4.png" type="Texture" id=2]
[ext_resource path="res://assets/evil-rock/walking_evil_rock_1.png" type="Texture" id=3]
[ext_resource path="res://assets/evil-rock/walking_evil_rock_2.png" type="Texture" id=4]
[ext_resource path="res://assets/evil-rock/walking_evil_rock_0.png" type="Texture" id=5]
[ext_resource path="res://assets/evil-rock/waking_evil_rock_2.png" type="Texture" id=6]
[ext_resource path="res://assets/evil-rock/waking_evil_rock_3.png" type="Texture" id=7]
[ext_resource path="res://assets/evil-rock/waking_evil_rock_1.png" type="Texture" id=8]
[ext_resource path="res://crawling_rocks.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "waking",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "walking",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.62525
height = 1.52834

[node name="walking_rocks" type="RigidBody2D"]
mode = 2
contacts_reported = 5
contact_monitor = true
script = ExtResource( 9 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walking"
frame = 2
playing = true

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0.0662155, 1.32433 )
shape = SubResource( 2 )

[node name="ray_cast_2d" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 0 )

[node name="cliff_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 10 )

[node name="kick_jump_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_walking_rocks_body_entered"]
